Impoved saving and fetching video features from db. Added query video implementation for VideoProcessing class

--- a/env-setup/environment_droplet.yml
+++ b/env-setup/environment_droplet.yml
@@ -6,6 +6,8 @@ dependencies:
   - pip=20.2.4
   - python=3.8.5
   - pymongo=3.11.0
+  - opencv
   - pip:
+      - tensorflow_hub
       - tensorflow
       - urllib3
